# hexbait

./: Cargo.toml  LICENSE  README.md
format_descriptions/: bitlocker_header.hbl  bitlocker_information.hbl  efi_partition_entry.hbl  efi_partition_header.hbl  elf.hbl  mbr_partition_table.hbl  mft_entry.hbl  mft_index_entry.hbl  ntfs_header.hbl  pe.hbl  vhdx_metadata_table.hbl  vhdx_region_table.hbl  vmdk_header.hbl
hexbait/: Cargo.toml  build.rs
hexbait-builtin-parsers/: Cargo.toml
hexbait-builtin-parsers/src/: lib.rs
hexbait-common/: Cargo.toml
hexbait-common/src/: endianness.rs  input.rs  lib.rs  quantities.rs
hexbait-generate-classification-data/: Cargo.toml
hexbait-generate-classification-data/src/: main.rs
hexbait-lang/: Cargo.toml  build.rs  grammar.ungram  tokens.mappings
hexbait-lang/src/: ast.rs  eval.rs  ir.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs
hexbait-lang/src/eval/: parse.rs  path.rs  provenance.rs  value.rs  view.rs
hexbait-lang/src/eval/parse/: diagnostics.rs
hexbait-lang/src/ir/: analysis.rs  expr.rs  lowering.rs  path.rs  str.rs
hexbait-lang/src/parser/: implementation.rs  infrastructure.rs
hexbait-lang/src/parser/implementation/: expressions.rs
hexbait-parse/: Cargo.toml
hexbait-parse/src/: main.rs
hexbait/src/: cache.rs  data.rs  gui.rs  lib.rs  main.rs  marking.rs  parsing.rs  search.rs  state.rs  statistics.rs  window.rs
hexbait/src/data/: file.rs  input.rs  slice.rs
hexbait/src/gui/: cached_image.rs  color.rs  gilbert_curve.rs  hex.rs  image_processing.rs  inspector.rs  marking.rs  modules.rs  primitives.rs  scrollbars.rs  signature_display.rs  statistics_display.rs  zoombars.rs
hexbait/src/gui/hex/: highlighting.rs  inspector.rs  parse_result.rs  primitives.rs  selection.rs
hexbait/src/gui/modules/: bars.rs  classification_info.rs  content.rs  data_inspector.rs  format_discovery.rs  gilbert_map.rs  hex.rs  inspector.rs  marking.rs  parsed_value.rs  scrollbars.rs  search.rs  settings.rs  statistics_display.rs
hexbait/src/marking/: store.rs
hexbait/src/parsing/eval/: path.rs  provenance.rs
hexbait/src/parsing/language/: ast.rs
hexbait/src/parsing/language/ast/: expr.rs
hexbait/src/search/: background.rs
hexbait/src/state/: classification_state.rs  format_discovery_state.rs  parse_state.rs  scroll_state.rs  scrollbar_state.rs  search_state.rs  selection_state.rs  settings.rs  statistics_display_state.rs
hexbait/src/statistics/: bigrams.rs  classification.rs  downsampled_bigrams.rs  flat.rs  handler.rs  raw_bigrams.rs
hexbait/src/statistics/classification/: builtin.rs
hexbait/src/statistics/classification/builtin/: amd64_code.rs  base64_english_text.rs  base64_high_entropy.rs  english_text.rs  high_entropy.rs  zeroes.rs
hexbait/src/statistics/handler/: background.rs  background_thread.rs  cache_size.rs  statistics_result.rs
hexbait/src/statistics/handler/background/: statistics_tree.rs  work_phase.rs
hexbait/src/statistics/handler/background/work_phase/: accumulate_old_statistics.rs  compute_bin.rs  entropy_estimation.rs  metric_computation.rs  metric_estimation.rs  statistics_computation.rs
scripts/: check_commit.sh
src/: data.rs  gui.rs  lib.rs  main.rs  model.rs  parsing.rs  search.rs  statistics.rs  window.rs
src/data/: file.rs  input.rs
src/gui/: cached_image.rs  color.rs  hex.rs  marking.rs  settings.rs  signature_display.rs  zoombars.rs
src/gui/hex/: inspector.rs  parse_result.rs  primitives.rs  selection.rs
src/parsing/: eval.rs  language.rs
src/parsing/eval/: error.rs  provenance.rs  value.rs
src/parsing/language/: ast.rs
src/parsing/language/ast/: expr.rs
src/search/: background.rs
src/statistics/: flat.rs  handler.rs  raw_bigrams.rs
src/statistics/handler/: background_thread.rs  cache_size.rs
