[workspace]
resolver = "2"
members = [
    "hexbait",
    "hexbait-builtin-parsers",
    "hexbait-common",
    "hexbait-generate-classification-data",
    "hexbait-lang",
    "hexbait-parse",
]

[profile.dev]
opt-level = 3
debug = true
incremental = true
debug-assertions = true
overflow-checks = true
