[package]
name = "hexbait-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = { version = "0.15.1", default-features = false, features = ["export_derive"] }
rowan = { version = "0.16.1", default-features = false }
smol_str = { version = "0.3.4", default-features = false }
range-set-blaze = { version = "0.4.1", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num_enum = { version = "0.7.5", default-features = false }
positioned-io = { version = "0.3.5", default-features = false }
hexbait-common = { path = "../hexbait-common" }

[build-dependencies]
ungrammar = "1.16.1"
heck = "0.5.0"
