[package]
name = "hexbait"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
eframe = "0.31.1"
egui = { version = "0.31.1", default-features = false }
egui_extras = { version = "0.31.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
unicode_names2 = { version = "2.0.0", default-features = false }
size_format = { version = "1.0.2", default-features = false }
quick_cache = { version = "0.6.14", default-features = false }
range-set-blaze = { version = "0.3.0", default-features = false }
malachite-nz = { version = "0.6.1", default-features = false }
aho-corasick = { version = "1.1.3", default-features = false }
hexbait-lang = { path = "../hexbait-lang" }
