[package]
name = "hexbait"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
eframe = "0.33.2"
egui = { version = "0.33.2", default-features = false }
egui_extras = { version = "0.33.2", default-features = false }
chrono = { version = "0.4.42", default-features = false }
unicode_names2 = { version = "2.0.0", default-features = false }
size_format = { version = "1.0.2", default-features = false }
quick_cache = { version = "0.6.18", default-features = false }
malachite-nz = { version = "0.7.0", default-features = false }
aho-corasick = { version = "1.1.4", default-features = false }
clap = { version = "4.5.51", features = ["derive"] }
hexbait-lang = { path = "../hexbait-lang" }
