[package]
name = "hexbait"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
eframe = "0.35.0"
egui = { version = "0.35.0", default-features = false }
egui_dock = { version = "0.20.1", default-features = false }
egui_extras = { version = "0.35.0", default-features = false }
chrono = { version = "0.4.45", default-features = false }
unicode_names2 = { version = "3.1.0", default-features = false }
size_format = { version = "1.0.2", default-features = false }
arc-swap = { version = "1.9.2", default-features = false }
range-set-blaze = { version = "0.6.1", default-features = false }
multiversion = { version = "0.8.0", default-features = false, features = ["std"] }
aho-corasick = { version = "1.1.4", default-features = false }
clap = { version = "4.6.2", features = ["derive"] }
infer = { version = "0.19.0", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
hexbait-common = { path = "../hexbait-common" }
hexbait-lang = { path = "../hexbait-lang" }
hexbait-builtin-parsers = { path = "../hexbait-builtin-parsers" }
